<resources>
    <string name="app_name">Fieldwork</string>
    <string name="button_addFieldwork">Add Fieldwork</string>
    <string name="hint_fieldworkTitle">Fieldwork Title</string>
    <string name="button_addfieldwork">Add Placemark</string>
    <string name="hint_fieldworkDescription">Description </string>
    <string name="menu_addFieldwork">Add</string>
    <string name="menu_cancelFieldwork">Cancel</string>
    <string name="save_fieldwork"> Update Fieldwork </string>
    <string name="enter_fieldwork_title"> Please enter a Fieldwork Title </string>
    <string name="button_addImage1">Add Image 1</string>
    <string name="button_addImage2">Add Image 2</string>
    <string name="button_addImage3">Add Image 3</string>
    <string name="button_addImage4">Add Image 4</string>
    <string name="select_fieldwork_image">Select fieldwork image</string>
    <string name="update_image1">Update Image 1</string>
    <string name="update_image2">Update Image 2</string>
    <string name="update_image3">Update Image 3</string>
    <string name="update_image4">Update Image 4</string>

    <string name="button_delFieldwork">Delete Fieldwork</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="change_fieldwork_image">Change fieldwork image</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password </string>
    <string name="button_login">Login</string>
    <string name="title_activity_login"> SignUp/Login</string>
    <string name="button_signUp">Sign UP</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="enter_email">Please enter Your Email</string>
    <string name="enter_valid_user">User details are not valid</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="total_visited">Total Visited</string>
    <string name="total_fieldworks">Total Fieldworks</string>

    <string name="title_activity_fieldwork_maps">Map of All Fieldworks</string>
    <string name="title_favourites">Favourites</string>
    <string name="fieldwork_image_placeholder">Fieldwork Image</string>
    <string name="fieldwork_title_placeholder">Fieldwork Title</string>
    <string name="fieldwork_description_placeholder">Fieldwork Description</string>

    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_favourites">Favourites</string>

    <string name="menu_saveFieldwork">Save Fieldwork</string>
    <string name="title_activity_fieldwork_list">Fieldworks</string>
    <string name="title_activity_fieldwork">Fieldwork</string>
    <string name="title_activity_edit_location">Fieldwork</string>

</resources>
