<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/fieldworkTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/fieldworkDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fieldworkTitle" />

        <ImageView
            android:id="@+id/imageIcon1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/update_image1" />/>

        <ImageView
            android:id="@+id/imageIcon2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/update_image2" />

        <ImageView
            android:id="@+id/imageIcon3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="152dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/update_image3" />

        <ImageView
            android:id="@+id/imageIcon4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="224dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/update_image4" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>